--- a/src/app/views/seller-account/settings/general/general.html
+++ b/src/app/views/seller-account/settings/general/general.html
@@ -1,9 +1,7 @@
-<form novalidate name="generalMdl.form" validate-form>
-    <div class="row form-group">
-        <div class="col-xs-12 col-sm-6 col-md-12 general-setting-col">
-            <label>Minimum Contract Period</label>
-            <input required name="minimumContract" ng-model="generalMdl.minimumContractPeriod" type="text" class="input-text" placeholder="number of days"> Days &nbsp
-            <button class="btn all-btn auto-width primary-btn" ng-click="generalMdl.save()">Save</button>
-        </div>
-    </div>
-</form>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
+	<form novalidate name="generalMdl.form" validate-form class="general-setting">
+		<label class="inline-block">Minimum Contract Period</label>
+		<input required name="minimumContract" ng-model="generalMdl.minimumContractPeriod" type="text" class="form-control inline-block" placeholder="number of days"> Days &nbsp
+		<button class="btn all-btn auto-width primary-btn" ng-click="generalMdl.save()">Save</button>
+	</form>
+</div>
