--- a/src/app/views/seller-account/settings/additional-charges/additional-charges.html
+++ b/src/app/views/seller-account/settings/additional-charges/additional-charges.html
@@ -1,5 +1,59 @@
 <h5 class="skin-color">Additional Charges</h5>
-<table class="table additional-charges-table">
+<div class="row visible-xs visible-sm" ng-repeat="charge in chargesMdl.charges">
+    <div class="col-xs-12">
+        <label>Charge Name:</label>
+        <span class="pull-right" ng-if="!charge.edit">{{charge.name}}</span>
+        <input type="text" ng-model="chargesMdl.editData.name" name="name" class="form-control" placeholder="Charge Name" ng-if="charge.edit">
+    </div>
+    <div class="col-xs-12">
+        <label>Value:</label>
+        <span class="pull-right" ng-if="!charge.edit">{{charge.value}}</span>
+        <input type="text" ng-model="chargesMdl.editData.value" name="value" class="form-control" placeholder="Value" ng-if="charge.edit">
+    </div>
+    <div class="col-xs-12">
+        <label>Unit:</label>
+        <span class="pull-right" ng-if="!charge.edit">{{charge.unit}}</span>
+        <select ng-model="chargesMdl.editData.unit" name="unit" class="form-control" ng-if="charge.edit">
+            <option value="flat">Flat</option>
+            <option value="pct">Percentage</option>
+        </select>
+    </div>
+    <div class="col-xs-12">
+        <label>Item Kind:</label>
+        <span class="pull-right" ng-if="!charge.edit">{{charge.item_kind}}</span>
+        <select ng-model="chargesMdl.editData.item_kind" name="kind" class="form-control" ng-if="charge.edit">
+            <option value="rental">Rental</option>
+            <option value="purchase">Purchase</option>
+            <option value="all">All</option>
+        </select>
+    </div>
+    <div class="col-xs-12">
+        <label>Category:</label>
+        <span class="pull-right" ng-if="!charge.edit">{{charge.categoryNames.join(',\n')}}</span>
+        <tags-input ng-model="chargesMdl.selectedCatsToEdit" class="edit-tags-directive tags-directive  form-control" style="margin-bottom: 10px;" ng-if="charge.edit">
+            <auto-complete min-length="1" load-on-focus="'true'" debounce-delay="'0'" source="chargesMdl.categories"></auto-complete>
+        </tags-input>
+    </div>
+    <div class="col-xs-12">
+        <div class="devider"></div>
+    </div>
+    <div class="col-xs-12" ng-if="!charge.edit">
+        <a class="clickable-icon pointerhover" ng-click="chargesMdl.edit(charge)">
+          <i class="fa fa-pencil-square-o"></i>
+        </a>
+        <a class="clickable-icon pointerhover pull-right" ng-click="chargesMdl.delete(charge)">
+          <i class="fa fa-trash"></i>
+        </a>
+    </div>
+    <div class="col-xs-12" ng-if="charge.edit">
+        <button class="btn all-btn auto-width update-btn primary-btn" ng-click="chargesMdl.update(charge)">Update</button>
+        <button class="btn all-btn auto-width primary-btn pull-right" ng-click="chargesMdl.cancelEdit(charge)">Cancel</button>
+    </div>
+    <div class="col-xs-12">
+        <hr>
+    </div>
+</div>
+<table class="table additional-charges-table hidden-xs hidden-sm">
   <thead>
     <tr>
       <th>Charge Name</th>
@@ -33,7 +87,7 @@
     </tr>
   </tbody>
 </table>
-<hr>
+<hr class="hidden-xs hidden-sm">
 <!-- <div class="row form-group">
     <div class="col-xs-6 col-sm-2 col-md-2">
         <label>Charge Name</label>
@@ -51,7 +105,7 @@
         <label>Category</label>
     </div>
 </div> -->
-<div ng-repeat="charge in chargesMdl.charges" class="row form-group light-fonts">
+<div ng-repeat="charge in chargesMdl.charges" class="row form-group light-fonts hidden-xs hidden-sm">
     <!-- <div ng-if="!charge.edit">
         <div class="col-xs-6 col-sm-2 col-md-2">
             <label>{{charge.name}}</label>
@@ -75,70 +129,69 @@
             <button class="btn all-btn" ng-click="chargesMdl.delete(charge)">Delete</button>
         </div>
     </div> -->
-    <div ng-if="charge.edit">
+    <div ng-if="charge.edit" class="shipping-xs">
         <form novalidate validate-form="validateEditForm" name="chargesMdl.editForm">
-
-            <div class="col-xs-6 col-sm-2 col-md-2">
-                <input type="text" ng-model="chargesMdl.editData.name" name="name" class="input-text full-width"
-                       placeholder="Charge Name"> <!-- dropdown -->
+            <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+                <input type="text" ng-model="chargesMdl.editData.name" name="name" class="form-control" placeholder="Charge Name"> <!-- dropdown -->
             </div>
-            <div class="col-xs-6 col-sm-2 col-md-2">
-                <input type="text" ng-model="chargesMdl.editData.value" name="value" class="input-text full-width"
+            <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+                <input type="text" ng-model="chargesMdl.editData.value" name="value" class="form-control"
                        placeholder="Value">
             </div>
-            <div class="col-xs-6 col-sm-2 col-md-2">
-                <select ng-model="chargesMdl.editData.unit" name="unit">
+            <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+                <select ng-model="chargesMdl.editData.unit" name="unit" class="form-control">
                     <option value="flat">Flat</option>
                     <option value="pct">Percentage</option>
                 </select>
             </div>
-            <div class="col-xs-6 col-sm-2 col-md-2">
-                <select ng-model="chargesMdl.editData.item_kind" name="kind">
+            <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+                <select ng-model="chargesMdl.editData.item_kind" name="kind" class="form-control">
                     <option value="rental">Rental</option>
                     <option value="purchase">Purchase</option>
                     <option value="all">All</option>
                 </select>
             </div>
-            <div class="col-xs-6 col-sm-3 col-md-2">
-                <tags-input ng-model="chargesMdl.selectedCatsToEdit" class="edit-tags-directive">
+            <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+                <tags-input ng-model="chargesMdl.selectedCatsToEdit" class="edit-tags-directive tags-directive  form-control" style="margin-bottom: 10px;">
                     <auto-complete min-length="1" load-on-focus="'true'" debounce-delay="'0'"
                                    source="chargesMdl.categories"></auto-complete>
                 </tags-input>
             </div>
-            <div class="col-xs-6 col-sm-3 col-md-1">
+            <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
                 <button class="btn all-btn auto-width update-btn primary-btn" ng-click="chargesMdl.update(charge)">Update</button>
-                <br>
                 <button class="btn all-btn auto-width primary-btn" ng-click="chargesMdl.cancelEdit(charge)">Cancel</button>
             </div>
         </form>
     </div>
 </div>
-<hr>
-<div class="row form-group">
+<hr class="hidden-xs hidden-sm">
+<div class="row form-group shipping-xs">
     <form novalidate validate-form="validateAddForm" name="chargesMdl.addForm">
-
-        <div class="col-xs-6 col-sm-2 col-md-2">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h5 class="skin-color">Add New</h5>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
             <input type="text" ng-model="chargesMdl.addData.name" name="name" class="form-control" placeholder="Charge Name"> <!-- dropdown -->
         </div>
-        <div class="col-xs-6 col-sm-2 col-md-2">
+        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
             <input type="text" ng-model="chargesMdl.addData.value" name="value" class="form-control" placeholder="Value">
         </div>
-        <div class="col-xs-6 col-sm-2 col-md-2">
+        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
             <select ng-model="chargesMdl.addData.unit" name="unit" class="form-control">
                 <option value="flat">Flat</option>
             </select>
         </div>
-        <div class="col-xs-6 col-sm-2 col-md-2">
+        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
             <select ng-model="chargesMdl.addData.item_kind" name="kind" class="form-control">
                 <option value="rental">Rental</option>
             </select>
         </div>
-        <div class="col-xs-6 col-sm-3 col-md-2">
-            <tags-input ng-model="chargesMdl.selectedCatsToAdd" class="tags-directive form-control">
+        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+            <tags-input ng-model="chargesMdl.selectedCatsToAdd" class="tags-directive form-control" style="margin-bottom: 10px;">
                 <auto-complete min-length="1" load-on-focus="'true'" debounce-delay="'0'" source="chargesMdl.categories"></auto-complete>
             </tags-input>
         </div>
-        <div class="col-xs-6 col-sm-3 col-md-1">
+        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
             <button class="btn all-btn auto-width primary-btn" ng-click="chargesMdl.add()">Add</button>
         </div>
     </form>
