--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -2854,11 +2854,19 @@ ul.menu.mini {
 .travelo-signup-box, .travelo-login-box {
   border: 2px solid $skin-active-color; width: 300px; margin: 0 auto;
   .login-social .button {
-    width: 100%; height: 36px; line-height: 36px; margin-bottom: 10px; font-size: 1.3333em; font-weight: 400; text-align: left; padding-left: 20px; letter-spacing: 0.04em;
+    width: 100%; height: 36px; line-height: 36px; margin-bottom: 10px; font-size: 13px; font-weight: 400; text-align: left; padding-left: 20px; letter-spacing: 0.04em;
     i { font-size: 1.5em; margin-right: 36px; width: 20px; float: left; display: block; }
   }
-  .login-facebook { background: #155c92; }
-  .login-googleplus { background: #d13535; }
+  .login-facebook { background: #155c92;
+    &:hover {
+      background: #155c92;
+    }
+   }
+  .login-googleplus { background: #d13535; 
+    &:hover {
+      background: #d13535;
+    }
+  }
   .seperator {
     line-height: 0; border-top: 1px solid #f5f5f5; position: relative; margin-top: 10px; margin-bottom: 10px;
     label { display: block; font-size: 0.9167em; position: absolute; left: 50%; top: 50%; line-height: 1; background: #fff; padding: 0 10px; margin: -1px 0 0; @include transform(translate(-50%, -50%)); font-weight: 400; }
@@ -6396,4 +6404,12 @@ section {
     margin-left: 15px;
     margin-right: 5px;
   }
+}
+
+.modal-dialog {
+  width: 600px;
+}
+
+.travelo-signup-box, .travelo-login-box {
+    width: auto !important;
 }
