--- a/src/app/views/login/login.html
+++ b/src/app/views/login/login.html
@@ -1,15 +1,15 @@
 <div class="travelo-login-box travelo-box">
     <div class="login-social">
-        <a  class="button login-facebook"><i class="soap-icon-facebook"></i>Login with Facebook</a>
-        <a  class="button login-googleplus"><i class="soap-icon-googleplus"></i>Login with Google+</a>
+        <a class="button login-facebook"><i class="soap-icon-facebook"></i>Login with Facebook</a>
+        <a class="button login-googleplus"><i class="soap-icon-googleplus"></i>Login with Google+</a>
     </div>
     <div class="seperator"><label>OR</label></div>
     <form validate-form name="loginMdl.form" novalidate ng-submit="login()">
         <div class="form-group">
-            <input type="text" name="email" ng-model="loginMdl.data.username" required class="input-text full-width" placeholder="email address">
+            <input type="text" name="email" ng-model="loginMdl.data.username" required class="form-control" placeholder="email address">
         </div>
         <div class="form-group">
-            <input type="password" name="password" ng-model="loginMdl.data.password" required class="input-text full-width" placeholder="password">
+            <input type="password" name="password" ng-model="loginMdl.data.password" required class="form-control" placeholder="password">
         </div>
         <div class="form-group">
             <a ng-click="loginMdl.forgotPassword()" class="forgot-password pull-right pointerhover">Forgot password?</a>
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="error">{{loginMdl.errorMessage}}</div>
-        <button process-indicator type="submit" class="full-width btn-medium" ng-click="loginMdl.login()">Login</button>
+        <button process-indicator type="submit" class="btn all-btn primary-btn full-width" ng-click="loginMdl.login()">Login</button>
     </form>
     <div class="seperator"></div>
     <p>Don't have an account? <a class="goto-signup soap-popupbox pointerhover" ng-click="loginMdl.signUp()">Sign up</a></p>
