--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -5570,12 +5570,12 @@ button.btn {
   left: 0;
   bottom: 0;
   right: 0;
-  background: rgba(0,0,0,.4);
+  background: rgba(0,0,0,.5);
 }
 
 .landing-section {
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .landing-top-header {
@@ -5735,7 +5735,6 @@ section {
 .landing-top-content {
   .page-title {
     font-size: 42px;
-    font-weight: 300;
   }
   .page-description {
     padding: 0 20%;
@@ -5760,6 +5759,7 @@ section {
     .search-button {
       background-color: $primary-button-color;
       color: $white-theme-color;
+      font-size: 15px;
       &:hover {
         color: $white-theme-color;
         background-color: $primary-hover-color;
@@ -5772,7 +5772,7 @@ section {
   border-bottom: 2px solid $button-color;
   width: 150px;
   display: inline-block;
-  margin-bottom: 25px;
+  margin-bottom: 30px;
 }
 
 .features-section {
@@ -6330,23 +6330,15 @@ section {
     cursor: pointer;
   }
   .notification {
-    height: 8px;
-    width: 8px;
+    height: 20px;
+    width: 20px;
     position: absolute;
     background: #FB4F14;
     border-radius: 100%;
-    right: 11px;
-    top: 15px;
+    right: 6px;
+    top: 8px;
     text-align: center;
     font-size: 12px;
-    animation-duration: 1s;
-    animation-delay: 300ms;
-    animation-iteration-count: infinite;
-    -webkit-animation-name: pulse;
-    -webkit-animation-duration: 1s;
-    -webkit-animation-delay: 300ms;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-name: pulse;
   }
 }
 
@@ -6412,4 +6404,58 @@ section {
 
 .travelo-signup-box, .travelo-login-box {
     width: auto !important;
+}
+
+.angucomplete-dropdown {
+  width: 100%;
+  height: 125px;
+  overflow: auto;
+  margin-top: 0;
+
+  .angucomplete-title {
+    font-size: 13px;
+  }
+
+}
+
+.angucomplete-row {
+  border-bottom: 1px solid $primary-border-color;
+}
+
+.angucomplete-selected-row {
+  background-color: transparent;
+  color: #000000;
+}
+
+.footer-input {
+  margin-bottom: 10px;
+}
+
+.filter-collapse-open {
+  height: 76px;
+  transition: all 0.6s ease;
+}
+
+.availabilty-collapse-open {
+  height: 120px;
+  transition: all 0.6s ease;
+}
+
+.filter-collapse-close {
+  height: 0;
+  overflow: hidden;
+  opacity: 0
+}
+
+.features-collapse-open {
+  min-height: 450px;
+  transition: all 0.6s ease;
+  height: auto;
+}
+
+.features-collapse-close {
+  min-height: 0;
+  height: 0;
+  overflow: hidden;
+  opacity: 0;
 }
