--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -155,21 +155,21 @@
 									<a href="" class="for-sm">
 										<i class="fa fa-bell-o big-font hidden-xs"></i>
 										<span class="visible-xs">Notifications</span>
-										<div class="notification animated hidden-xs" style="right: 15px;"></div>
+										<div class="notification hidden-xs">1</div>
 									</a>
 								</li>
 								<li class="not-user notification-li" ng-if="isLoggedIn()">
 									<a href="" class="for-sm">
 										<i class="fa fa-envelope-o big-font hidden-xs"></i>
 										<span class="visible-xs">Messages</span>
-										<div class="notification animated hidden-xs"></div>
+										<div class="notification hidden-xs">2</div>
 									</a>
 								</li>
 								<li class="not-user notification-li" ng-if="isLoggedIn()">
 									<a ui-sref="main.cart" class="for-sm">
 										<i class="fa fa-shopping-cart big-font hidden-xs"></i>
 										<span class="visible-xs">Shopping Cart</span>
-										<div class="notification animated hidden-xs"></div>
+										<div class="notification hidden-xs">{{rmodel.cartCount || 0}}</div>
 									</a>
 								</li>
 								<div class="visible-xs account-list-xs" ng-if="isLoggedIn()">
@@ -548,10 +548,9 @@
 					<h2>Mailing List</h2>
 					<p>Sign up for our mailing list to get latest updates and offers.</p>
 					<br />
-					<div class="icon-check">
+					<div class="icon-check footer-input">
 						<input type="text" class="input-text full-width" placeholder="your email" />
 					</div>
-					<br />
 					<span>We respect your privacy</span>
 				</div>
 				<div class="col-xs-12 visible-xs devider"></div>
